infra/applications/rabbitMQ/deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: rabbitmq-deployment
  labels:
    component: rabbitmq-deployment
spec:
  replicas: 1
  serviceName: rabbitmq-service
  volumeClaimTemplates:
    - metadata:
        name: rabbitmq-volume
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
  selector:
    matchLabels:
      component: rabbitmq-deployment
  template:
    metadata:
      labels:
        component: rabbitmq-deployment
    spec:
      containers:
        - name: rabbitmq-deployment
          image: docker.io/rabbitmq:3.9.13-management
          ports:
            - containerPort: 5672
              name: rabbit-port
            - containerPort: 15672
              name: rabbit-mng-port
          volumeMounts:
            - name: rabbitmq-volume
              mountPath: /var/lib/rabbitmq
